# demo-python-timer

./: README.md  app_functions.py  main.py  pyproject.toml  requirements.txt  ui_functions.py  ui_main.py  ui_styles.py
