[tool.poetry]
name = "demo-python-timer"
version = "0.1.0"
description = ""
authors = ["Natthasath Saksupanara <natthasath.sak@gmail.com>"]
license = "MIT License"
readme = "README.md"
packages = [{include = "demo_python_timer"}]

[tool.poetry.dependencies]
python = "3.10.9"
pyside2 = "^5.15.2.1"
pytimeparse = "^1.1.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
